# Unix_chatroom

./: .gitignore  CMakeLists.txt  README
cli/: CMakeLists.txt  main.c
cli/include/: chatcli.h
cli/src/: chatcli.c
srv/: CMakeLists.txt  main.c
srv/include/: chatsrv.h  usrmgr.h
srv/lib/: usrmgr.c
srv/src/: chatsrv.c  usrmgr.c
